RichwoodNew/src/objects/Forecast_Product_Category__c.object
<CustomObject>
    <fields>
        <fullName>Account_Yearly_Forecast__c</fullName>
        <label>Account Yearly Forecast</label>
        <referenceTo>Account_Yearly_Forecast__c</referenceTo>
        <relationshipLabel>Product Categories in this Forecast</relationshipLabel>
        <relationshipName>Forecast_Product_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Budgeted_Sales__c</fullName>
        <label>Budgeted Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budgeted_Units__c</fullName>
        <label>Budgeted Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <referenceTo>Product_Category__c</referenceTo>
        <relationshipLabel>Forecasts Against this Product Category</relationshipLabel>
        <relationshipName>Forecast_Product_Categories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Projected_Amount__c</fullName>
        <label>Projected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Projected Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Forecast Product Category</label>
    <nameField>
        <displayFormat>FPC{00000}</displayFormat>
        <label>Forecast Product Category</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Product Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>